--- a/index.html
+++ b/index.html
@@ -18,18 +18,38 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="btn btn-primary" id="btn-toggle">
+      <button class="btn btn-primary" id="btn-open">
         <i class="fa fa-bars"></i>
       </button>
       <ul class="nav">
+        <li class="nav-item active">
+          <a href="#" class="nav-link">صفحه اصلی</a>
+        </li>
         <li class="nav-item">
-          <a href="" class="nav-link"></a>
+          <a href="#" class="nav-link">کتاب ها</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">نویسندگان</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">دسته بندی ها</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">خبرنامه</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">درباره ما</a>
         </li>
       </ul>
     </nav>
 
     <!-- Sidebar -->
     <nav class="sidebar">
+      <div class="navbar">
+        <button class="btn btn-primary" id="btn-close">
+          <i class="fa fa-bars"></i>
+        </button>
+      </div>
       <ul class="sidebar-menu">
         <li class="menu-item active">
           <a href="#" class="menu-link">صفحه اصلی</a>
@@ -51,5 +71,68 @@
         </li>
       </ul>
     </nav>
+
+    <!-- Hero -->
+
+    <section class="hero"></section>
+    <section class="books">
+      <div class="slider">
+        <a href="#" class="card">
+          <div class="card-image">
+            <img src="dist/img/23807._SY475_.jpg" alt="" />
+          </div>
+          <div class="card-body">
+            <h3>The Silence of The Lambs</h3>
+          </div>
+          <div class="card-actions">
+            <i class="fa fa-star" style="color: gold;"> 4.2</i>
+            <i class="fa fa-eye" style="color: var(--primary-color);"> 4.2 K</i>
+            <i class="fa fa-heart" style="color: red;"> 5 K</i>
+          </div>
+        </a>
+
+        <a href="#" class="card">
+          <div class="card-image">
+            <img src="dist/img/5060378.jpg" alt="" />
+          </div>
+          <div class="card-body">
+            <h3>The Girl Who Played With Fire</h3>
+          </div>
+          <div class="card-actions">
+            <i class="fa fa-star" style="color: gold;"> 4.2</i>
+            <i class="fa fa-eye" style="color: var(--primary-color);"> 4.2 K</i>
+            <i class="fa fa-heart" style="color: red;"> 5 K</i>
+          </div>
+        </a>
+
+        <a href="#" class="card">
+          <div class="card-image">
+            <img src="dist/img/17378527.jpg" alt="" />
+          </div>
+          <div class="card-body">
+            <h3>The Raven King</h3>
+          </div>
+          <div class="card-actions">
+            <i class="fa fa-star" style="color: gold;"> 4.2</i>
+            <i class="fa fa-eye" style="color: var(--primary-color);"> 4.2 K</i>
+            <i class="fa fa-heart" style="color: red;"> 5 K</i>
+          </div>
+        </a>
+
+        <a href="#" class="card">
+          <div class="card-image">
+            <img src="dist/img/36124936._SY475_.jpg" alt="" />
+          </div>
+          <div class="card-body">
+            <h3>The Outsider</h3>
+          </div>
+          <div class="card-actions">
+            <i class="fa fa-star" style="color: gold;"> 4.2</i>
+            <i class="fa fa-eye" style="color: var(--primary-color);"> 4.2 K</i>
+            <i class="fa fa-heart" style="color: red;"> 5 K</i>
+          </div>
+        </a>
+      </div>
+    </section>
   </body>
 </html>
