--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
     <section class="hero"></section>
     <section class="books">
+      <h1>برترین های ژانر ترسناک</h1>
       <div class="slider">
         <a href="#" class="card">
           <div class="card-image">
@@ -85,9 +86,9 @@
             <h3>The Silence of The Lambs</h3>
           </div>
           <div class="card-actions">
-            <i class="fa fa-star" style="color: gold;"> 4.2</i>
-            <i class="fa fa-eye" style="color: var(--primary-color);"> 4.2 K</i>
-            <i class="fa fa-heart" style="color: red;"> 5 K</i>
+            <i class="fa fa-star" style="color: gold"> 4.2</i>
+            <i class="fa fa-eye" style="color: var(--primary-color)"> 4.2 K</i>
+            <i class="fa fa-heart" style="color: red"> 5 K</i>
           </div>
         </a>
 
@@ -99,9 +100,9 @@
             <h3>The Girl Who Played With Fire</h3>
           </div>
           <div class="card-actions">
-            <i class="fa fa-star" style="color: gold;"> 4.2</i>
-            <i class="fa fa-eye" style="color: var(--primary-color);"> 4.2 K</i>
-            <i class="fa fa-heart" style="color: red;"> 5 K</i>
+            <i class="fa fa-star" style="color: gold"> 4.2</i>
+            <i class="fa fa-eye" style="color: var(--primary-color)"> 4.2 K</i>
+            <i class="fa fa-heart" style="color: red"> 5 K</i>
           </div>
         </a>
 
@@ -113,9 +114,9 @@
             <h3>The Raven King</h3>
           </div>
           <div class="card-actions">
-            <i class="fa fa-star" style="color: gold;"> 4.2</i>
-            <i class="fa fa-eye" style="color: var(--primary-color);"> 4.2 K</i>
-            <i class="fa fa-heart" style="color: red;"> 5 K</i>
+            <i class="fa fa-star" style="color: gold"> 4.2</i>
+            <i class="fa fa-eye" style="color: var(--primary-color)"> 4.2 K</i>
+            <i class="fa fa-heart" style="color: red"> 5 K</i>
           </div>
         </a>
 
@@ -127,12 +128,69 @@
             <h3>The Outsider</h3>
           </div>
           <div class="card-actions">
-            <i class="fa fa-star" style="color: gold;"> 4.2</i>
-            <i class="fa fa-eye" style="color: var(--primary-color);"> 4.2 K</i>
-            <i class="fa fa-heart" style="color: red;"> 5 K</i>
+            <i class="fa fa-star" style="color: gold"> 4.2</i>
+            <i class="fa fa-eye" style="color: var(--primary-color)"> 4.2 K</i>
+            <i class="fa fa-heart" style="color: red"> 5 K</i>
           </div>
         </a>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer-content">
+        <section class="links">
+          <ul>
+            <li>
+              <a href="#"
+                >Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                >Vero impedit dolor ullam inventore repellendus odio laboriosam
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                >Distinctio odit eum quisquam repellendus consequuntur modi
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                >Velit dignissimos repellat necessitatibus neque voluptate nam
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                >Quam velit nihil nostrum blanditiis ipsa animi alias! Quaerat,
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="socials">
+          <ul>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+          </ul>
+        </section>
+        <section class="about">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            deserunt quis illum fuga natus modi obcaecati rem dolorem excepturi
+            porro molestiae corrupti eius itaque adipisci, quaerat laboriosam et
+            doloribus repudiandae magni blanditiis doloremque eveniet. Sint
+            ipsum ipsa ea dolorum totam.
+          </p>
+        </section>
+      </div>
+      <i class="far fa-copyright"></i>
+    </footer>
   </body>
 </html>
