--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="dist/css/style.css" />
+    <link rel="stylesheet" href="dist/css/carousel.css" />
     <script src="dist/js/sidebar.js" defer></script>
+    <script src="dist/js/carousel.js" defer></script>
     <title>کتاب دوست</title>
   </head>
   <body>
@@ -74,7 +76,40 @@
 
     <!-- Hero -->
 
-    <section class="hero"></section>
+    <section class="hero">
+      <!-- Carousel -->
+      <div class="carousel">
+        <button class="carousel-btn carousel-btn-left">
+          <i class="fa fa-chevron-left"></i>
+        </button>
+        <button class="carousel-btn carousel-btn-right">
+          <i class="fa fa-chevron-right"></i>
+        </button>
+        <div class="carousel-content">
+          <ul class="carousel-nav">
+          </ul>
+          <div class="carousel-track-container">
+            <ul class="carousel-track">
+              <li class="carousel-slide">
+                <img src="dist/img/c01.jpg" alt="" class="carousel-img" />
+              </li>
+              <li class="carousel-slide">
+                <img src="dist/img/c02.jpg" alt="" class="carousel-img" />
+              </li>
+              <li class="carousel-slide">
+                <img src="dist/img/c03.jpg" alt="" class="carousel-img" />
+              </li>
+              <li class="carousel-slide">
+                <img src="dist/img/c04.jpg" alt="" class="carousel-img" />
+              </li>
+              <li class="carousel-slide">
+                <img src="dist/img/c05.jpg" alt="" class="carousel-img" />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="books">
       <h1>برترین های ژانر ترسناک</h1>
       <div class="slider">
