--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="btn btn-primary" id="btn-open">
+      <button class="btn btn-blue" id="btn-open">
         <i class="fa fa-bars"></i>
       </button>
       <ul class="nav">
@@ -48,7 +48,7 @@
     <!-- Sidebar -->
     <nav class="sidebar">
       <div class="navbar">
-        <button class="btn btn-primary" id="btn-close">
+        <button class="btn btn-blue" id="btn-close">
           <i class="fa fa-bars"></i>
         </button>
       </div>
@@ -122,7 +122,7 @@
           </div>
           <div class="card-actions">
             <i class="fa fa-star" style="color: gold"> 4.2</i>
-            <i class="fa fa-eye" style="color: var(--primary-color)"> 4.2 K</i>
+            <i class="fa fa-eye" style="color: var(--blue-color)"> 4.2 K</i>
             <i class="fa fa-heart" style="color: red"> 5 K</i>
           </div>
         </a>
@@ -136,7 +136,7 @@
           </div>
           <div class="card-actions">
             <i class="fa fa-star" style="color: gold"> 4.2</i>
-            <i class="fa fa-eye" style="color: var(--primary-color)"> 4.2 K</i>
+            <i class="fa fa-eye" style="color: var(--blue-color)"> 4.2 K</i>
             <i class="fa fa-heart" style="color: red"> 5 K</i>
           </div>
         </a>
@@ -150,7 +150,7 @@
           </div>
           <div class="card-actions">
             <i class="fa fa-star" style="color: gold"> 4.2</i>
-            <i class="fa fa-eye" style="color: var(--primary-color)"> 4.2 K</i>
+            <i class="fa fa-eye" style="color: var(--blue-color)"> 4.2 K</i>
             <i class="fa fa-heart" style="color: red"> 5 K</i>
           </div>
         </a>
@@ -164,7 +164,7 @@
           </div>
           <div class="card-actions">
             <i class="fa fa-star" style="color: gold"> 4.2</i>
-            <i class="fa fa-eye" style="color: var(--primary-color)"> 4.2 K</i>
+            <i class="fa fa-eye" style="color: var(--blue-color)"> 4.2 K</i>
             <i class="fa fa-heart" style="color: red"> 5 K</i>
           </div>
         </a>
