added logo and favicon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" href="dist/logo/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/style.css" />
     <link rel="stylesheet" href="dist/css/carousel.css" />
     <script src="dist/js/sidebar.js" defer></script>
@@ -24,6 +25,9 @@
         <i class="fa fa-bars"></i>
       </button>
       <ul class="nav">
+        <a href="#" class="nav-brand">
+          <img src="dist/logo/logo.png" class="logo" alt="">
+        </a>
         <li class="nav-item active">
           <a href="#" class="nav-link">صفحه اصلی</a>
         </li>
