finished styling admin dashboard

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -76,7 +76,7 @@
 
     <div class="container indented">
       <h1>کاربران</h1>
-      <table class="table">
+      <table class="table" style="width: 90%">
         <tr class="table-head">
           <th></th>
           <th>نام</th>
@@ -86,19 +86,43 @@
           <th></th>
         </tr>
         <tr>
+          <td>1</td>
           <td>علیرضا</td>
           <td>چوبینه</td>
           <td>alireza@gmail.com</td>
+
+          <td>
+            <a class="btn"><i class="fa fa-info-circle"></i></a>
+          </td>
+          <td>
+            <a class="btn"><i class="fa fa-trash"></i></a>
+          </td>
         </tr>
         <tr>
+          <td>2</td>
           <td>علیرضا</td>
           <td>چوبینه</td>
           <td>alireza@gmail.com</td>
+
+          <td>
+            <a class="btn"><i class="fa fa-info-circle"></i></a>
+          </td>
+          <td>
+            <a class="btn"><i class="fa fa-trash"></i></a>
+          </td>
         </tr>
         <tr>
+          <td>3</td>
           <td>علیرضا</td>
           <td>چوبینه</td>
           <td>alireza@gmail.com</td>
+          
+          <td>
+            <a class="btn"><i class="fa fa-info-circle"></i></a>
+          </td>
+          <td>
+            <a class="btn"><i class="fa fa-trash"></i></a>
+          </td>
         </tr>
       </table>
     </div>
